# alpenglow

./: .editorconfig  .gitignore  .mergify.yml  Alpenglow_Debug_Workflow_Analysis.md  Alpenglow_File_Explanations.md  Alpenglow_Log_Analysis.md  Alpenglow_Test_Cases.md  Alpenglow_Test_Execution_Report.md  Alpenglow_Workflow_Explanation.md  CLAUDE.md  Cargo.toml  DOCKER_README.md  Dockerfile  Justfile  README.md  Stake_Distribution_Test_Analysis.md  bandwidth_plot.py  check.sh  deny.toml  download_data.sh  example.config.toml  ip_list  latency_histogram.py  lint.sh  num_shreds.py  run.sh  rustfmt.toml  test.sh  typos.toml
.github/: dependabot.yml
.github/actions/download-data/: action.yml
.github/actions/rust-setup/: action.yml
.github/workflows/: coverage.yml  fuzz.yml  pr-title.yml  rust.yml  sanitizers.yml  scorecard.yml  security-audit.yml  verify.yml
benches/: crypto.rs  disseminator.rs  network.rs  pool.rs  shred_verifier.rs  shredder.rs  udp_throughput.rs
data/: mainnet_validators_epoch780.json  mainnet_validators_epoch859.json  mainnet_validators_epoch860.json  mainnet_validators_validatorsdotapp.json  servers-2020-07-19.csv  sui_validators.csv
formal-verification/: ACHIEVEMENT_SUMMARY.md  Alpenglow.tla  Alpenglow.tla.clean  AlpenglowSimulation.cfg  AlpenglowSimulation.tla  Alpenglow_TTrace_1760177770.tla  BOUNTY_SUBMISSION_REPORT.md  BOUNTY_SUBMISSION_STATUS.md  ByzantineAlpenglow.tla  CLEANUP_SUMMARY.md  COMPLETE_VERIFICATION_REPORT.md  COVER_LETTER.md  EDGE_CASES.md  EDGE_CASE_QUORUM_SUMMARY.md  FINAL_SUBMISSION_CHECKLIST.md  LivenessAlpenglow.tla  MC.cfg  MC.tla  MC_Byzantine.cfg  MC_Byzantine.tla  MC_Liveness.cfg  MC_Liveness.tla  MC_edge_byzantine.cfg  MC_edge_byzantine_ok.cfg  MC_edge_minimal.cfg  MC_edge_minimal2.cfg  MC_edge_minimal_ok.cfg  MC_edge_minimal_tmp.cfg  MC_edge_quorum.cfg  MC_edge_quorum_ok.cfg  NOVEL_INSIGHTS.md  PartitionAlpenglow.tla  PartitionAlpenglowMC.cfg  PartitionAlpenglowMC.tla  QUICKSTART.md  README.md  README_WINDOWS.md  READY.md  ResilienceAlpenglow.tla  ResilienceAlpenglowMC.cfg  (+9 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: consensus_message_roundtrip.rs  deserialize_consensus_message.rs  deserialize_repair_request.rs  deserialize_repair_response.rs  deserialize_shred.rs  deserialize_transaction.rs  merkle_proof_verify.rs  shred_roundtrip.rs  vote_sig_verify.rs
orchestrator/: Cargo.toml  README.md
orchestrator/assets/: benchmark-parameters-template.yml  settings-custom-template.yml  settings-vultr-template.yml
orchestrator/src/: alpenglow.rs  benchmark.rs  lib.rs  main.rs  provider.rs  settings.rs  ssh.rs  testbed.rs
orchestrator/src/provider/: aws.rs  custom.rs  vultr.rs
scripts/: bandwidth_plot.py  latency_histogram.py  num_shreds.py  run.sh
src/: all2all.rs  consensus.rs  crypto.rs  disseminator.rs  execution.rs  lib.rs  logging.rs  main.rs  metrics.rs  network.rs  repair.rs  shred_verifier.rs  shredder.rs  slice.rs  slice_index.rs  slot.rs  test_utils.rs  types.rs  validator.rs
src/all2all/: mod.rs  robust.rs  trivial.rs
src/consensus/: block_producer.rs  blockstore.rs  cert.rs  core.rs  driver.rs  epoch_info.rs  epoch_manager.rs  latency_sim.rs  mod.rs  pool.rs  produce_block.rs  sim.rs  validated_cert.rs  validated_vote.rs  vote.rs  votor.rs
src/consensus/blockstore/: reconstruction_worker.rs  slot_block_data.rs
src/consensus/pool/: finality_tracker.rs  mod.rs  parent_ready_tracker.rs  slot_state.rs  sorted_vec.rs  valid_to_root_tracker.rs
src/consensus/pool/parent_ready_tracker/: parent_ready_state.rs
src/crypto/: aggsig.rs  cipher.rs  hash.rs  merkle.rs  mod.rs  signature.rs
src/disseminator/: mod.rs  rotor.rs  trivial.rs  turbine.rs
src/disseminator/rotor/: mod.rs  sampling_strategy.rs
src/disseminator/turbine/: mod.rs  weighted_shuffle.rs
src/execution/: commitment.rs  staking.rs  state.rs
src/network/: mod.rs  quic.rs  simulated.rs  tcp.rs  udp.rs
src/network/simulated/: core.rs  mod.rs  ping_data.rs  stake_distribution.rs  token_bucket.rs
src/orchestrator/: mod.rs
src/orchestrator/client/: aws.rs  mod.rs  vultr.rs
src/repair/: mod.rs
src/shredder/: aont.rs  mod.rs  pool.rs  reed_solomon.rs  shred_index.rs  validated_shred.rs  validated_shreds.rs
src/tests/: mod.rs
src/types/: epoch.rs  fraction.rs  slice.rs  slice_index.rs  slot.rs  stake.rs  validator_id.rs  validator_index.rs
tests/: liveness.rs  smoke_tests.rs
