[package]
name = "alpenglow"
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
authors = ["Quentin Kniep <quentin@anza.xyz>"]
description = "Reference research implementation of the Alpenglow consensus protocol."
license = "Apache-2.0"
repository = "https://github.com/qkniep/alpenglow"
readme = "README.md"
keywords = ["alpenglow", "solana", "consensus", "distributed-systems"]
categories = ["algorithms", "network-programming", "data-structures"]
publish = false

[dependencies]
aes = { version = "0.9", features = ["hazmat", "zeroize"] }
async-trait = "0.1"
anyhow = "1"
bitvec = "1"
blst = { version = "0.3", features = ["serde", "serde-secret"] }
clap = { version = "4", features = ["derive"], optional = true }
csv = { version = "1", optional = true }
ctr = "0.10"
derive_more = { version = "2", features = ["add", "add_assign", "as_ref", "from", "into", "sum"] }
ed25519-zebra = "4"
either = "1"
fastrace = "0.7"
fastrace-opentelemetry = { version = "0.18", optional = true }
futures = "0.3"
hex-literal = "1"
hotpath = "0.21"
libc = "0.2"
log = "0.4"
logforth = { version = "0.30", features = ["append-fastrace", "bridge-log", "filter-rustlog"] }
quick_cache = "0.7"
opentelemetry = { version = "0.32", optional = true }
opentelemetry-otlp = { version = "0.32", features = ["grpc-tonic"], optional = true }
opentelemetry_sdk = { version = "0.32", optional = true }
owo-colors = "4"
parking_lot = "0.12"
plotters = { version = "0.3.7", default-features = false, features = ["bitmap_backend", "bitmap_encoder", "ab_glyph", "all_elements", "all_series", "histogram", "line_series"], optional = true }
rand = "0.10"
rayon = { version = "1", optional = true }
reed-solomon-simd = "3"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
sha2 = "0.11"
smallvec = "1"
socket2 = "0.6"
thiserror = "2"
time = { version = "0.3", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
toml = { version = "1", optional = true }
wincode = { version = "0.5", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
csv = "1"
divan = "0.1"
hex = "0.4"
mockall = "0.15"
serde_json = "1"
tempfile = "3"
toml = "1"

[features]
# CLI binaries (everything under `src/bin/`),
# gated to keep the library build lean; build them with `--features cli`.
cli = ["dep:clap", "dep:toml"]

# Activates the `#[hotpath::measure]` profiling instrumentation, which otherwise
# compiles to no-ops. `hotpath-alloc` additionally tracks allocations per scope.
hotpath = ["hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]

# Mainnet-derived simulation inputs (`network::simulated::{ping_data,
# stake_distribution}`) and the `simulations` binary. Pulls in `csv` / `serde_json`
# for parsing `data/*.{csv,json}` and `rayon` for parallel sims.
simulations = ["dep:rayon", "dep:csv", "dep:serde_json", "dep:plotters"]

# Exposes `test_utils` and other test-only methods to out-of-crate test/bench targets.
# Enabled implicitly by `cargo test`, and explicitly for some benches.
test-utils = []

# Enables `fastrace` span collection and OpenTelemetry (OTLP) export.
# Without it, `fastrace` instrumentation compiles to no-ops and
# the gRPC/OTLP dependency stack is dropped entirely.
telemetry = [
    "fastrace/enable",
    "logforth/append-fastrace",
    "dep:fastrace-opentelemetry",
    "dep:opentelemetry",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry_sdk",
]

[lints.rust]
unreachable_pub = "warn"

[lints.clippy]
cast_possible_truncation = "allow"
# panic hygiene
unwrap_used = "warn"
dbg_macro = "warn"
todo = "warn"
undocumented_unsafe_blocks = "warn"
allow_attributes = "warn"
ignore_without_reason = "warn"
# async / perf
large_futures = "warn"
redundant_clone = "warn"
significant_drop_tightening = "warn"
or_fun_call = "warn"
unchecked_time_subtraction = "warn"

[profile.release]
debug = true
overflow-checks = true
codegen-units = 1
lto = true

[profile.bench]
codegen-units = 1
lto = true

[[bench]]
name = "crypto"
harness = false

[[bench]]
name = "disseminator"
harness = false
required-features = ["test-utils"]

[[bench]]
name = "network"
harness = false
required-features = ["test-utils"]

[[bench]]
name = "shredder"
harness = false
required-features = ["test-utils"]

[[bench]]
name = "pool"
harness = false
required-features = ["test-utils"]

[[bin]]
name = "all2all_test"
path = "src/bin/all2all_test.rs"
required-features = ["cli"]

[[bin]]
name = "local_cluster"
path = "src/bin/local_cluster.rs"
required-features = ["cli"]

[[bin]]
name = "node"
path = "src/bin/node.rs"
required-features = ["cli"]

[[bin]]
name = "performance_test"
path = "src/bin/performance_test.rs"
required-features = ["cli"]

[[bin]]
name = "workload_generator"
path = "src/bin/workload_generator.rs"
required-features = ["cli"]

[[bench]]
name = "udp_throughput"
harness = false

[[bin]]
name = "simulations"
path = "src/bin/simulations/main.rs"
required-features = ["cli", "simulations"]
